--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <!-- Header -->
     <header id="header" class="header">
         <div class="container">
-            <div class="row">
+            <div class="row col-lg-8 ml-5">
                 <div class="col-lg-5">
                     <div class="text-container">
                         <h1 class="h1-large">I am Intersted in ML and Web development</h1>
