--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
     <!-- Header -->
     <header id="header" class="header">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row col-lg-8 ml-5">
                 <div class="col-lg-5">
                     <div class="text-container">
