--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
 
 
     <!-- Header -->
-    <header id="header" class="header">
+        <header id="header" class="header ">
         <div class="container-fluid">
             <div class="row col-lg-8 ml-5">
-                <div class="col-lg-5">
-                    <div class="text-container">
+                <div class="col-lg-6">
+                    <div class="text-container text-left">
                         <h1 class="h1-large">I am Intersted in ML and Web development</h1>
                         <a class="btn-solid-lg page-scroll" href="#about">Discover</a>
                         <a class="btn-outline-lg page-scroll" href="#contact"><i class="fas fa-user"></i>Contact Me</a>
