--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
             <a href="#home">home</a>
             <a href="#about">about</a>
             <a href="#menu">menu</a>
-            <a href="#book">book</a>
         </nav>
-
-        <a href="#" class="btn">book a table</a>
+        <span>
+        <a href="#book" class="btn" style="margin-right: 3rem;">book a table</a>
+        <a href="Login-Signup-form/login.html" class="btn">Login</a>
+    </span>
     </header>
 
     <section class="home" id="home">
