--- a/index.html
+++ b/index.html
@@ -36,14 +36,15 @@
     <section class="home" id="home">
         <div class="row">
             <div class="content">
-                <h3>fresh coffee in the morning</h3>
-                <h3>for the coffiano people </h3>
-                <a href="#" class="btn">buy one now</a>
+                <h3>fresh coffee </h3>
+                <h3>in the morning</h3>
+                
             </div>
+            <a href="#" class="btn">buy now</a>
 
-            <div class="image">
+            <!-- <div class="image">
                 <img src="image/home-img-1.png" class="main-home-image" alt="">
-            </div>
+            </div> -->
         </div>
 
 
@@ -59,9 +60,7 @@
 
             <div class="content">
                 <h3 class="title">what's make our coffee special!</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel rerum laboriosam reprehenderit ipsa id
-                    repellat odio illum, voluptas, necessitatibus assumenda adipisci. Hic, maiores iste? Excepturi illo
-                    dolore mollitia qui quia.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore amet praesentium autem iure veniam, doloribus rerum quis vero minima quas ex asperiores assumenda totam, dicta nisi pariatur inventore a. Cupiditate.</p>
                 <a href="#" class="btn">read more</a>
                 <div class="icons-container">
                     <div class="icons">
@@ -146,9 +145,9 @@
         <h1 class="heading">booking <span>reserve a table</span></h1>
 
         <form action="">
-            <input type="text" placeholder="Name" class="box">
-            <input type="email" placeholder="Email" class="box">
-            <input type="email" placeholder="Number" class="box">
+            <input type="text" placeholder="Name" class="box" required>
+            <input type="email" placeholder="Email" class="box" required>
+            <input  type="text" placeholder="Number" class="box" minlength="11" maxlength="11" required>
             <textarea name="" placeholder="Message" class="box" id="" cols="30" rows="10"></textarea>
             <input type="submit" value="send message" class="btn">
         </form>
