Added the header and changed the style

--- a/index.html
+++ b/index.html
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3762689983352985"
-     crossorigin="anonymous"></script>
-    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3762689983352985" crossorigin="anonymous"></script>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>meow meow</title>
+    <title>مواقع الخدمات الحكومية</title>
     <link rel="stylesheet" href="CSS/Style.css">
     <link rel="icon" href="Image/Logo.png" type="image/png">
 
 
 </head>
+
 <body>
+    <header>
+        <h1>مدونة</h1>
+        <nav>
+            <ul>
+                <li><a href="">الرئيسية</a></li>
+                <li><a href="">عن مدونة</a></li>
+                <li><a href="">تواصل معنا</a></li>
+                <li><a href="">خدماتنا </a></li>
+            </ul>
+        </nav>
+    </header>
+
     <div id="main">
         <div class="Logo">
             <!-- <h1>ساعد النماء</h1> -->
@@ -21,7 +34,7 @@
         </div>
         <section class="Supports">
             <h3>برامج الدعم</h3>
-            
+
             <a target="_blank" class="Links" href="https://sbis.hrsd.gov.sa/#/login">الضمان الإجتماعي</a>
             <br><br>
             <a target="_blank" class="Links" href="https://portal.ca.gov.sa/">حساب المواطن</a>
@@ -100,4 +113,5 @@
 
     </div>
 </body>
+
 </html>
