--- a/index.html
+++ b/index.html
@@ -20,41 +20,15 @@
         <h1>مدونة</h1>
         <nav>
             <ul>
-                <li><a href="">الرئيسية</a></li>
+                <li class="selected"><a href="">الرئيسية</a></li>
                 <li><a href="">عن مدونة</a></li>
                 <li><a href="">تواصل معنا</a></li>
-                <li><a href="">خدماتنا </a></li>
+                <li><a href="Pages/gov-services.html">خدماتنا </a></li>
             </ul>
         </nav>
     </header>
 
-    <section id="government-services">
-        <div class="tab">
-            <button class="tablinks" id="defaultTab" onclick="openService(event, 'Supports')">برامج الدعم</button>
-            <button class="tablinks" onclick="openService(event, 'Courts')">محاكم ومشاكل</button>
-            <button class="tablinks" onclick="openService(event, 'Banks')">البنوك</button>
-            <button class="tablinks" onclick="openService(event, 'Labours')">العمال والمؤسسات</button>
-            <button class="tablinks" onclick="openService(event, 'General')">خدمات عامة</button>
-        </div>
 
-        <div id="Supports" class="tabcontent"></div>
-        <div id="Courts" class="tabcontent"></div>
-        <div id="Banks" class="tabcontent"></div>
-        <div id="Labours" class="tabcontent"></div>
-        <div id="General" class="tabcontent"></div>
-    </section>
-
-
-    <script src="scripts/tabs.js"></script>
-    <script src="scripts/gov-service-manager.js"></script>
-    <script>
-        document.getElementById("defaultTab").click();
-        QueryService('Courts');
-        QueryService('Banks');
-        QueryService('Labours');
-        QueryService('General');
-        QueryService('Supports');
-    </script>
 </body>
 
 </html>
